--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         }
         else{
             console.log("unvalid choice");
+            humanchoice = "";
         }
        }
        function playround (Hmchoice,Comchoice){
